appId: org.openeel.app

---
- clearState: org.openeel.app
- launchApp:
      arguments:
          respect_directory: ${output.SCHOOL_URL}

- tapOn: "Get Started"

- runFlow:
      file: "get_started_select_school_by_name.yaml"
      env:
          SCHOOL_NAME: ${SCHOOL_NAME}

- runFlow:
    when:
      visible: "Choose a saved passkey for Respect"
    file: "choose_passkey_prompt_cancel.yaml"

- tapOn:
      id: "username"
- inputText: "admin"
- tapOn:
      id : "password"
- inputText: ${SCHOOL_ADMIN_PASSWORD}
- tapOn: "Login"
- runFlow:
    when:
      visible: "Save password for Respect?"
    file: "save_password_prompt_cancel.yaml"
- assertVisible: "Apps"
